# genAI

./: .gitignore  main.py  pyproject.toml  requirements.txt
langchain_tuts/: 1-langchainintro.ipynb  2-langchain_modelIntegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb
